--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <head>
-        <title>Example</title>
-    </head>
-    <body>
-        <p>MEM 18.21</p>
-        <img src="https://sun9-north.userapi.com/sun9-78/s/v1/ig2/TXp_YBSGvaEpApzuA1EbK3YJHIWcinsD0GI3W7UHzu4ImWXszI2WP2tuTI_ev0GfLeeEd4qcGgblJbU3mrxMLYDF.jpg?size=1922x1521&quality=95&type=album">
-    </body>
+<head>
+    <meta charset="utf-8">
+    <title>Hello!</title>
+</head>
+<body>
+    <p>Page content 1, click:</p>
+   <a href="content/">1</a>
+   <p>Download music, click:</p>
+   <a href="music/">2</a>
+   <p>Apache Info</p>
+   <a href="info.php/">3</a></br>
+</body>
 </html>
